[package]
name = "opti-neko"
version = "0.1.0"
edition = "2021"

[dependencies]
winapi = { version = "0.3.9", features = ["processthreadsapi", "psapi", "winnt"] }
tonic = "0.12.3"
prost = "0.13.4"
tokio = { version = "1.42.0", features = ["full"] }
bollard = "0.18.1"
serde = { version = "1.0.216", features = ["derive"] }
config = "0.15.2"
anyhow = "1.0.94"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[build-dependencies]
tonic-build = "0.12.3"
